adjust responsivity in motog6 and iphone

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <div>
+        <div id="app">
             <label for="money">Money R$</label>
             <input type="text" id="money" onkeyup="maskMoney(event)" autofocus maxlength="11"
                 placeholder="Ex: 1.249,90">
