add link to repo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" id="money" onkeyup="maskMoney(event)" autofocus maxlength="11"
                 placeholder="Ex: 1.249,90">
             <h2>BRL moneyMask <i class="fab fa-js"></i></h2>
-            <small>By <a href="https://github.com/mrbrunelli" target="_blank">Matheus R. Brunelli</a></small>
+            <small>By <a href="https://github.com/mrbrunelli/regexp-mask-money" target="_blank">Matheus R. Brunelli</a></small>
         </div>
     </div>
 
